--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,10 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MitutoyoApp
 endorsed.classpath=
 excludes=
+file.reference.JTattoo-1.6.13.jar=/home/a31r1z/NetBeansProjects/AppMitutoyo/lib/JTattoo-1.6.13.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.JGuiExtensible.classpath}
+    ${libs.JGuiExtensible.classpath}:\
+    ${file.reference.JTattoo-1.6.13.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
